# chess_position_trainer

./: .gitignore  Dockerfile  README.md  board_utils.py  generate.py  pyproject.toml  separate_games.py  server.py
templates/: basic.html  choices.html  compare.html  index.html  spa.html
