[tool.poetry]
name = "chess-position-trainer"
version = "0.1.0"
description = ""
authors = ["bohrium2b <dzm2026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
Jinja2 = "^3.1.4"
stockfish = "^3.28.0"
chess = "^1.11.1"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
